force-app/main/default/objects/Education_Detail__c/Education_Detail__c.object-meta.xml
<CustomObject>
    <label>Education Detail</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Education Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>