force-app/main/default/objects/Education_Detail__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <length>200</length>
    <type>Text</type>
</CustomField>